# vaspin

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pos  poscar.py  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml  tests.yml
core/: io.py  poscar.py
scripts/: pos
src/vaspin/: __init__.py  io.py  types.py
src/vaspin/cli/: efnv.py  force.py  incar.py  loc.py  pos.py
src/vaspin/core/: __init__.py  ewald.py  io.py  outcar.py  poscar.py
src/vaspin/incar/: __init__.py  core.py  rules.py  tags.py  validator.py
src/vaspin/incar/data/: tag_data.json
src/vaspin/incar/data/tags_info/: ADDGRID  AEXX  AGGAC  AGGAX  ALDAC  ALDAX  ALGO  ALPHA VDW  AMGGAC  AMGGAX  AMIN  AMIX  AMIX MAG  ANDERSEN PROB  ANTIRES  APACO  BANDGAP  BEXT  BMIX  BMIX MAG  BPARAM  BSEELECTRON  BSEHOLE  BSEPREC  CH AMPLIFICATION  CH LSPEC  CH NEDOS  CH SIGMA  CLL  CLN  CLNT  CLZ  CMBJ  CMBJA  CMBJB  CMBJE  CPARAM  CSHIFT  CUTOFF MU  CUTOFF SIGMA  (+500 more)
src/vaspin/outcar/: __init__.py  outcar.py
src/vaspin/poscar/: __init__.py  poscar.py
src/vaspin/post/: efnv.py  phonon.py
src/vaspin/types/: __init__.py
src/vaspin/utils/: __init__.py  constants.py  datatype.py  utils.py
tests/: conftest.py  test_io.py  test_outcar.py  test_phonon.py  test_poscar.py  test_strain.py  test_utils.py
tests/data/: .gitattributes  OUTCAR-normal  OUTCAR-normal-error  OUTCAR-opt  OUTCAR-phonon  OUTCAR-phonon-SiC  OUTCAR-spin  POSCAR  POSCAR-SiC  POSCAR_cate  POSCAR_frac
tests/data/incar/: INCAR  INCAR_invalid  INCAR_written  incar.json
tests/incar/: conftest.py  test_incar_core.py  test_incar_io.py  test_incar_validate.py  test_tags.py
types/: array.py
utils/: __init__.py  utils.py
