[project]
name = "vaspin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Xin Zhao", email = "zx0@mail.ustc.edu.cn"}
]
dependencies = [
    "numpy>=1.24.0,<=2.1.0",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "uniplot>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/lingyaochu/vaspin"
Repository = "https://github.com/lingyaochu/vaspin.git"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "vaspin",
]

[project.scripts]
pos = "vaspin.cli.pos:main"
force = "vaspin.cli.force:main"
loc = "vaspin.cli.loc:main"
efnv = "vaspin.cli.efnv:main"
incar = "vaspin.cli.incar:main"

[tool.uv.sources]
vaspin = { workspace = true }

[tool.codespell]
write-changes = true
skip = "src/vaspin/incar/data/tags_info/*,src/vaspin/utils/constants.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint]
select = [
    "D",
    "UP",
    "PTH",
    "C90",
    "E",
    "W",
    "F",
    "I",
    "B",
    "SIM",
    "C4",
    "RUF",
    "A"
]
ignore = ["D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
